--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "swiper": "^11.2.1"
   }
 }
